--- a/views/users.hbs
+++ b/views/users.hbs
@@ -1,3 +1,5 @@
+<h1>{{title}}</h1>
+<p>Below is a list of our users</p>
 {{!-- depending on the value of the listExists variable --}}
 {{!-- if it’s true then the list will be rendered --}}
 {{!-- if the value is equal to false the list will not be rendered --}}
